--- a/test/testcases/auto-test-shorthand.html
+++ b/test/testcases/auto-test-shorthand.html
@@ -18,6 +18,7 @@ limitations under the License.
 <style>
 #container {
   -webkit-column-width: 250px;
+  -moz-column-width: 250px;
   column-width: 250px;
 }
 
