--- a/test/testcases/auto-test-transform-units.html
+++ b/test/testcases/auto-test-transform-units.html
@@ -36,31 +36,6 @@ limitations under the License.
 <script>
 "use strict";
 
-function detectFeatures() {
-  var style = document.createElement('style');
-  style.textContent = '' +
-     'dummyRuleForTesting {' +
-     'width: calc(0px);' +
-     'width: -webkit-calc(0px); }';
-  document.head.appendChild(style);
-  var transformCandidates = [
-      'transform',
-      'webkitTransform',
-      'msTransform'
-  ];
-  var transformProperty = transformCandidates.filter(function(property) {
-    return property in style.sheet.cssRules[0].style;
-  })[0];
-  var calcFunction = style.sheet.cssRules[0].style.width.split('(')[0];
-  document.head.removeChild(style);
-  return {
-    transformProperty: transformProperty,
-    calcFunction: calcFunction
-  };
-}
-
-var features = detectFeatures();
-
 var transformValues = [
   ['translate(0px, 0px)', 'translate(10em)', 'translate(10%, 1in)'],
   ['rotate(0deg)', 'rotate(50deg)', 'rotate(3rad)', 'rotate(200grad)'],
@@ -88,7 +63,7 @@ for (var i = 0; i < transformValues.length; i++) {
       div.className = "expected";
       div.style.top = y + 'px';
       div.style.left = x + 'px';
-      div.style[features.transformProperty] = transformValues[i][k];
+      div.style[test_features.transformProperty] = transformValues[i][k];
       toplevel.appendChild(document.createElement("div"));
       var div = toplevel.lastChild;
       div.className = "anim";
