Adding charset to fix difference between framed and non-framed versions.
The character encoding of a framed document was not declared. The document may
appear different if viewed without the document framing it.

--- a/test/testcases/auto-test-font-weight.html
+++ b/test/testcases/auto-test-font-weight.html
@@ -14,7 +14,7 @@ See the License for the specific language governing permissions and
 limitations under the License.
 -->
 
-<!DOCTYPE html>
+<!DOCTYPE html><meta charset="UTF-8">
 <head>
 <link
     href='http://fonts.googleapis.com/css?family=Raleway:400,100,200,300,500,600,700,800,900'
