--- a/test/testcases/disabled-media.html
+++ b/test/testcases/disabled-media.html
@@ -19,7 +19,7 @@ Requires the test harness to allow tests to be added after page load. See
 https://github.com/web-animations/web-animations-js/issues/321
 -->
 
-<!DOCTYPE html>
+<!DOCTYPE html><meta charset="UTF-8">
 <style type="text/css">
 video {
   width: 100px;
