--- a/test/testcases/test-update-state.html
+++ b/test/testcases/test-update-state.html
@@ -13,7 +13,7 @@ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
 -->
-<!DOCTYPE html>
+<!DOCTYPE html><meta charset="UTF-8">
 
 <script>
 var expected_failures = {
@@ -23,8 +23,6 @@ var expected_failures = {
   }
 };
 </script>
-Updated style should be visible
-
 <script src="../bootstrap.js"></script>
 <script>
 "use strict";
