--- a/test/test-runner.html
+++ b/test/test-runner.html
@@ -14,6 +14,8 @@ See the License for the specific language governing permissions and
 limitations under the License.
 -->
 <!DOCTYPE html>
+<meta charset="UTF-8">
+
 <style>
 
 #status-box {
