--- a/test/testcases/auto-test-rectangle.html
+++ b/test/testcases/auto-test-rectangle.html
@@ -14,7 +14,7 @@ See the License for the specific language governing permissions and
 limitations under the License.
 -->
 
-<!DOCTYPE html>
+<!DOCTYPE html><meta charset="UTF-8">
 <body>
 <style>
 body {
