--- a/test/testcases/auto-test-text-shadow.html
+++ b/test/testcases/auto-test-text-shadow.html
@@ -14,7 +14,7 @@ See the License for the specific language governing permissions and
 limitations under the License.
 -->
 
-<!DOCTYPE html>
+<!DOCTYPE html><meta charset="UTF-8">
 <body>The shadows should slide back under the text.
 <script>
 var expected_failures = {
