--- a/test/testcases/test-player.html
+++ b/test/testcases/test-player.html
@@ -16,7 +16,7 @@ limitations under the License.
 Written by Steph McArthur
 -->
 
-<!DOCTYPE html>
+<!DOCTYPE html><meta charset="UTF-8">
 <div id="anim"></div>
 
 <script src="../bootstrap.js"></script>
