--- a/test/testcases/test-pseudo-element-reference.html
+++ b/test/testcases/test-pseudo-element-reference.html
@@ -13,7 +13,7 @@ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
 -->
-<!DOCTYPE html>
+<!DOCTYPE html><meta charset="UTF-8">
 <style>
 #child:before {
   display: block;
