--- a/test/testcases/unit-test-modify-timing-params.html
+++ b/test/testcases/unit-test-modify-timing-params.html
@@ -14,7 +14,7 @@ See the License for the specific language governing permissions and
 limitations under the License.
 -->
 
-<!DOCTYPE html>
+<!DOCTYPE html><meta charset="UTF-8">
 <div id="anim"></div>
 
 <script src="../bootstrap.js"></script>
