--- a/test/test-generator.html
+++ b/test/test-generator.html
@@ -27,7 +27,7 @@ input#iframeSrc {
 }
 </style>
 
-<input type="text" id="iframeSrc" value="testcases/test-calc.html">
+<input type="text" id="iframeSrc">
 <button id="load-button" onclick="loadFile()">Load</button><br>
 <iframe id="frame" src=""></iframe>
 <div id="userOptions">
@@ -74,6 +74,7 @@ var frameTime = 100;
 var checks = [];
 var interval;
 
+document.getElementById("iframeSrc").value = window.location.search.substring(1) || "testcases/test-calc.html";
 document.getElementById("interval").value = "1";
 document.getElementById("obProp").value = ".anim, width";
 
