Fixing tests which where discovered to be broken.

--- a/test/testcases/auto-test-shorthand.html
+++ b/test/testcases/auto-test-shorthand.html
@@ -47,6 +47,10 @@ var expected_failures = {
     firefox: true,
     message: "Floating point issues."
   },
+  '/#background at t=(0|0.5|1|1.5|2)s/': {
+    firefox: true,
+    message: "Setting background to 'auto' gets back 'auto auto'"
+  },
   '#font at t=2s': {
     firefox: true,
     message: "Floating point issues."
