--- a/test/testcases/auto-test-initial.html
+++ b/test/testcases/auto-test-initial.html
@@ -59,6 +59,14 @@ word word word word</pre>
 
 <script>
 var expected_failures = {
+   '#outline at t=0s' : {
+      chrome: ["28.0", "29.0"],
+      message: "Output changes from rgb to rgba in later Chrome"
+   },
+   '/(#background|#outline) at t=0s/' : {
+    firefox: true,
+      message: "rbga(0, 0, 0, 0) gets converted to 'transparent' in Firefox."
+   },
   '#text at t=0s': {
     firefox: true,
     message: "Floating point issues."
@@ -70,7 +78,7 @@ var expected_failures = {
   '/(#border|#transform) at t=2s/': {
     firefox: true,
     message: "Floating point issues."
-  }
+  },
 };
 </script>
 <script src="../bootstrap.js"></script>
