--- a/test/testcases/auto-test-matrix-transforms.html
+++ b/test/testcases/auto-test-matrix-transforms.html
@@ -65,7 +65,7 @@ limitations under the License.
 
 <script>
 var expected_failures = {
- '/Auto generated tests at t=(0.4|0.8|1.20*2|1.6)s/': {
+ '/Auto generated tests at t=(0|0.4|0.8|1.20*2|1.6|2)s/': {
    firefox: true,
    message: "Floating point issues."
  }
