--- a/test/testcases/auto-test-calc.html
+++ b/test/testcases/auto-test-calc.html
@@ -111,6 +111,14 @@ completely cover the light red box when the animation has finished.
 <div class="spacer">
 </div>
 
+<script>
+var expected_failures = {
+  '/Auto generated tests at t=(0|0.5|1|1.5)s/': {
+    firefox: true,
+    message: "Floating point issues."
+  }
+};
+</script>
 <script src="../bootstrap.js"></script>
 <script>
 "use strict";
