--- a/test/testcases/auto-test-matrix-transforms.html
+++ b/test/testcases/auto-test-matrix-transforms.html
@@ -63,6 +63,14 @@ limitations under the License.
 <div class="anim" id="e"></div>
 <div style="height: 550px"></div>
 
+<script>
+var expected_failures = {
+ '/Auto generated tests at t=(0.4|0.8|1.20*2|1.6)s/': {
+   firefox: true,
+   message: "Floating point issues."
+ }
+};
+</script>
 <script src="../bootstrap.js"></script>
 <script>
 "use strict";
