--- a/test/testcases/test-update-state.html
+++ b/test/testcases/test-update-state.html
@@ -14,6 +14,17 @@ See the License for the specific language governing permissions and
 limitations under the License.
 -->
 <!DOCTYPE html>
+
+<script>
+var expected_failures = {
+  'Updated style should be visible despite unrelated errors at t=5s': {
+    firefox: true,
+    message: "Issue with window sizing cause value to be zero rather then 500px."
+  }
+};
+</script>
+Updated style should be visible
+
 <script src="../bootstrap.js"></script>
 <script>
 "use strict";
