Fix use of backgroundColor in demo animations
This was broken by 1b757b12664f87e535e222fb9d682c0dc27b7865

--- a/demos/test-circle-square.html
+++ b/demos/test-circle-square.html
@@ -86,10 +86,10 @@ limitations under the License.
       var around1 = new Animation(document.querySelector("#a"), {left: "450px"},
           2);
       var around2 = new Animation(document.querySelector("#a"), [
-        {"background-color": "lightsteelblue"},
-        {"background-color": "red"},
-        {"background-color": "green"},
-        {"background-color": "lightsteelblue"},
+        {"backgroundColor": "lightsteelblue"},
+        {"backgroundColor": "red"},
+        {"backgroundColor": "green"},
+        {"backgroundColor": "lightsteelblue"},
       ], 8);
       var around3 = new Animation(document.querySelector("#a"), {top: "250px"},
           {startDelay: 2, duration: 2});
