--- a/demos/car-demo.html
+++ b/demos/car-demo.html
@@ -137,23 +137,23 @@
   var carAnimation = new SeqGroup([
     new ParGroup([
       new Animation(document.querySelector("#redLight"),
-          {"background-color": lightOff}, {iterationDuration: 0.5}),
+          {"backgroundColor": lightOff}, {iterationDuration: 0.5}),
       new Animation(document.querySelector("#greenLight"),
-          {"background-color": "green"}, {iterationDuration: 0.5}),
+          {"backgroundColor": "green"}, {iterationDuration: 0.5}),
     ], {}),
     new Animation(document.querySelector(".car"), {left: "100%"},
         {iterationDuration: 3, timingFunction: "ease-in"}),
     new ParGroup([
       new Animation(document.querySelector("#greenLight"),
-          {"background-color": lightOff}, {iterationDuration: 0.5}),
+          {"backgroundColor": lightOff}, {iterationDuration: 0.5}),
       new Animation(document.querySelector("#orangeLight"),
-          {"background-color": "rgb(255,165,0)"}, {iterationDuration: 0.5}),
+          {"backgroundColor": "rgb(255,165,0)"}, {iterationDuration: 0.5}),
     ], {startDelay: 0.25}),
     new ParGroup([
       new Animation(document.querySelector("#orangeLight"),
-          {"background-color": lightOff}, {iterationDuration: 0.5}),
+          {"backgroundColor": lightOff}, {iterationDuration: 0.5}),
       new Animation(document.querySelector("#redLight"),
-          {"background-color": "red"}, {iterationDuration: 0.5}),
+          {"backgroundColor": "red"}, {iterationDuration: 0.5}),
     ], {startDelay: 0.25}),
     new Animation(document.querySelector(".car"),
         [{left: "-500px"}, {left: "10px"}],
