Making the log elements <pre> so they look nicer.

--- a/test/test-runner.html
+++ b/test/test-runner.html
@@ -46,6 +46,11 @@ tbody {
   color: gray;
 }
 
+td.log ul li {
+  white-space: pre;
+  font-family: monospace;
+}
+
 /* Fail styles */
 tbody.fail {
   color: red;
