On a javascript error in the test-runner hide the test results as they are unreliable.
addEventListner('error' is totally different to window.onError in Firefox :(

--- a/test/test-runner.html
+++ b/test/test-runner.html
@@ -101,6 +101,24 @@ Posting: <span id=posting></span> (<span id=posted></span>)
 
 <script>
 'use strict';
+window.onerror = function(msg, url, line) {
+  // Ignore errors caused by webdriver
+  if (msg.match(/webdriver/))
+    return;
+
+  if (document.getElementById('javascript-errors') == null) {
+    document.body.innerHTML = '<pre id="javascript-errors">JAVASCRIPT ERRORS\n\n</pre>';
+  }
+
+  var e = document.getElementById('javascript-errors');
+  var msg = 'Javascript Error in ' + url + '\n' +
+      'Line ' + line + ': ' + msg + '\n';
+  e.innerHTML += msg;
+};
+</script>
+
+<script>
+'use strict';
 
 (function() {
 window.finished = false;
@@ -119,7 +137,6 @@ window.addEventListener('load', function() {
   document.querySelector('#spacer').style.height =
       getComputedStyle(document.querySelector('body')).height;
 });
-
 function trueOffsetTop(element) {
   var t = 0;
   if (element.offsetParent) {
