--- a/test/testcases/test-player-cleanup.html
+++ b/test/testcases/test-player-cleanup.html
@@ -14,6 +14,7 @@ See the License for the specific language governing permissions and
 limitations under the License.
 -->
 <!DOCTYPE html><meta charset="UTF-8">
+<div id='anim'></div>
 <script src="../bootstrap.js"></script>
 <script>
 "use strict";
@@ -22,7 +23,8 @@ limitations under the License.
 document.timeline.play(new Animation(null, {}, 1));
 document.timeline.play(new Animation(null, {},
 	{iterationDuration: 1, fillMode: 'none'}));
-var player = document.timeline.play(new Animation(null, {},
+var player = document.timeline.play(new Animation(anim, 
+	[{backgroundColor: 'red'}, {backgroundColor: 'white'}],
 	{iterationDuration: 1, fillMode: 'none'}));
 
 timing_test(function() {
@@ -40,6 +42,12 @@ timing_test(function() {
 	});
 	at(3, function() {
 		player.currentTime = 0;
+		assert_equals(document.timeline.getCurrentPlayers().length, 1,
+			"Only restarted animation current");
+		assert_equals(_WebAnimationsTestingUtilities._knownPlayers.length, 2,
+			"Restarted and forward filling animations known");
+		assert_styles('#anim', [{"backgroundColor": 'rgb(255, 0, 0)'}], 
+			"takes effect immediately");		
 	});
 	at(3.5, function() {
 		assert_equals(document.timeline.getCurrentPlayers().length, 1,
@@ -47,5 +55,15 @@ timing_test(function() {
 		assert_equals(_WebAnimationsTestingUtilities._knownPlayers.length, 2,
 			"Restarted and forward filling animations known");
 	})
+
+	at(5, function() {
+		player.source.specified.iterationDuration = 4;
+		assert_equals(document.timeline.getCurrentPlayers().length, 1,
+			"Only restarted animation current");
+		assert_equals(_WebAnimationsTestingUtilities._knownPlayers.length, 2,
+			"Restarted and forward filling animations known");
+		assert_styles('#anim', [{"backgroundColor": 'rgb(255, 128, 128)'}], 
+			"takes effect immediately");		
+	});
 });
 </script>
