--- a/test/testcases/test-addeventlistener.html
+++ b/test/testcases/test-addeventlistener.html
@@ -99,5 +99,56 @@ function createAnimation() {
   timing_test(function() {at(1, function() {
     assert_true(onEventHandler);
   });}, 'Check on' + eventType + ' handler');
+
+
+  animation = createAnimation();
+  var clearOnEventHandler = true;
+  animation['on' + eventType] = function() { clearOnEventHandler = false; };
+  animation['on' + eventType] = null;
+  document.timeline.play(animation);
+  timing_test(function() {at(1, function() {
+    assert_true(clearOnEventHandler);
+  });}, 'Check clearing on' + eventType + ' handler');
+
+
+  animation = createAnimation();
+  var onEventOrdering = '';
+  animation.addEventListener(eventType, function() { onEventOrdering += 'a'; });
+  animation['on' + eventType] = function() { onEventOrdering += '!'; };
+  animation.addEventListener(eventType, function() { onEventOrdering += 'b'; });
+  animation['on' + eventType] = function() { onEventOrdering += 'c'; };
+  animation.addEventListener(eventType, function() { onEventOrdering += 'd'; });
+  document.timeline.play(animation);
+  timing_test(function() {at(1, function() {
+    assert_equals(onEventOrdering, 'abcd');
+  });}, 'Check on' + eventType + ' handler ordering and overriding');
+
+
+  animation = createAnimation();
+  var onEventOrderingAfterRemoval = '';
+  var eventHandlerToRemoveA = function() { onEventOrderingAfterRemoval += '!'; };
+  var eventHandlerToRemoveB = function() { onEventOrderingAfterRemoval += '!!'; };
+  animation.addEventListener(eventType, function() { onEventOrderingAfterRemoval += 'a'; });
+  animation.addEventListener(eventType, eventHandlerToRemoveA);
+  animation['on' + eventType] = function() { onEventOrderingAfterRemoval += 'b'; };
+  animation.addEventListener(eventType, function() { onEventOrderingAfterRemoval += 'c'; });
+  animation.addEventListener(eventType, eventHandlerToRemoveB);
+  animation.removeEventListener(eventType, eventHandlerToRemoveA);
+  animation.removeEventListener(eventType, eventHandlerToRemoveB);
+  document.timeline.play(animation);
+  timing_test(function() {at(1, function() {
+    assert_equals(onEventOrderingAfterRemoval, 'abc');
+  });}, 'Check on' + eventType + ' handler ordering after removal');
+
+
+  animation = createAnimation();
+  var onEventDuplication = 0;
+  var duplicateFunction = function() { onEventDuplication += 1; };
+  animation.addEventListener(eventType, duplicateFunction);
+  animation['on' + eventType] = duplicateFunction;
+  document.timeline.play(animation);
+  timing_test(function() {at(1, function() {
+    assert_equals(onEventDuplication, 2);
+  });}, 'Check on' + eventType + ' handler duplication');
 });
 </script>
